<resources>
    <string name="app_name">BMI Calculator</string>
    <string name="bmi_calculator">BMI Calculator</string>
    <string name="choose_gender">Choose Gender</string>
    <string name="_00">00</string>
    <string name="weight_kg">Weight (Kg)</string>
    <string name="height_cm">Height (cm)</string>
    <string name="_00">00</string>
    <string name="calculate_your_bmi">Calculate Your BMI</string>
    <string name="_20_2">20.2</string>
    <string name="overweight">Overweight</string>
    <string name="calculate_again">Calculate again</string>
</resources>