<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="96dp"
    android:padding="32dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/app_heading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bmi_calculator"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/choose_gender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/app_heading"
        android:layout_marginTop="32dp"
        android:layout_marginStart="70dp"
        android:layout_marginEnd="50dp"
        android:text="@string/choose_gender"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        android:textStyle="bold"
        android:textColor="@color/blue"/>

    <ImageView
        android:id="@+id/image_boy"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_below="@id/choose_gender"
        android:layout_marginTop="32dp"
        android:layout_marginStart="32dp"
        android:src="@drawable/boy_blur" />

    <ImageView
        android:id="@+id/image_girl"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_below="@id/choose_gender"
        android:layout_marginTop="32dp"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="32dp"
        android:src="@drawable/girl_blur" />

    <TextView
        android:id="@+id/weight_heading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/image_boy"
        android:layout_marginStart="48dp"
        android:layout_marginTop="25dp"
        android:text="@string/weight_kg"
        android:textColor="@color/black"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/height_heading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/image_girl"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="48dp"
        android:text="@string/height_cm"
        android:textColor="@color/black"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/weight_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/weight_heading"
        android:layout_marginStart="52dp"
        android:background="@android:color/transparent"
        android:hint="@string/_00"
        android:inputType="numberDecimal"
        android:maxLength="4"
        android:textSize="48sp" />

    <EditText
        android:id="@+id/height_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/height_heading"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="52dp"
        android:background="@android:color/transparent"
        android:hint="@string/_00"
        android:inputType="numberDecimal"
        android:maxLength="4"
        android:textSize="48sp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/calculate_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/weight_value"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
        android:backgroundTint="@color/blue"
        android:padding="12dp"
        android:text="@string/calculate_your_bmi"
        android:textAllCaps="false"
        android:textStyle="bold"
        app:cornerRadius="10dp"
        android:visibility="visible"/>

    <LinearLayout
        android:id="@+id/bmiView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/weight_value"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
        android:orientation="vertical"
        android:visibility="gone" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="Your BMI" />

    <TextView
        android:id="@+id/bmi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/_20_2"
        android:textColor="@color/black"
        android:textSize="40sp"
        android:textStyle="bold" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/bmi_status"
            android:layout_gravity="center_horizontal"
            android:text="@string/overweight"
            android:textStyle="bold"
            android:textColor="@color/black"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/calculate_again"
            android:layout_marginTop="16dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/calculate_again"
            android:textColor="@color/blue"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textStyle="bold"/>
</LinearLayout>


</RelativeLayout>